--- a/xperiences/merchants/templates/merchants/merchant_profile.html
+++ b/xperiences/merchants/templates/merchants/merchant_profile.html
@@ -17,7 +17,7 @@
         <div id="merchant-listing" class="section">
             <div id="merchant-image">
                 <a title="{{ merchant.name }}" href="#">
-                    {% include 'profile_image.html' with merchant=merchant %}
+                    {% include 'profile_image.html' with user_extension=merchant %}
                 </a>
             </div>
             <div id="merchant-details">
