--- a/xperiences/templates/profile_image.html
+++ b/xperiences/templates/profile_image.html
@@ -1,3 +1,3 @@
 <div class="image-wrapper" style='width:100px; height:100px; position:relative;'>
-    <img alt="{{ merchant.name }}" src="{% if merchant.photo %}{{ merchant.photo.url }}{% else %}http://graph.facebook.com/{{ merchant.FB_ID }}/picture/?type=large{% endif %}">
+    <img alt="{{ user_extension.name }}" src="{% if user_extension.photo %}{{ user_extension.photo.url }}{% else %}http://graph.facebook.com/{{ user_extension.FB_ID }}/picture/?type=large{% endif %}">
 </div>
