--- a/xperiences/templates/admin_form.html
+++ b/xperiences/templates/admin_form.html
@@ -7,7 +7,8 @@
 {% endblock %}
 {% block content %}
 <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
-{{ form.as_p }}
+    {{ form.errors }}
+    {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
 {% endblock %}
