--- a/xperiences/merchants/templates/merchants/inbox.html
+++ b/xperiences/merchants/templates/merchants/inbox.html
@@ -8,6 +8,7 @@
                 {% include 'profile_image.html' with user_extension=message.sender %}
                 {% endif %}
                 <div id="thumb-details">
+                    <a href="{% url view_message message.id %}">
                     <p class="listing-title">
                         {{ message.title }}
                     </p>
@@ -17,6 +18,7 @@
                     <p>
                         {{ message.time }}
                     </p>
+                    </a>
                 </div>
 
             </li>
