--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -56,20 +56,63 @@ table {
  */
 
 html {
-	background: url(../images/background.jpg);
 }
 
 body {
 	font-family: calluna-sans, "helvetica", "ariel", sans-serif;
-	font-size: 12pt;
+	font-size: 11pt;
+	background: #6c7585;
 	color: #7a7a7a;
 	line-height: 1.3;
 	text-shadow: 1px 1px 1px #ccc;
 }
 
-#wrapper {
+.secondary {
+	color: #999999;
+	font-size: 10pt;
+	text-shadow: 1px 1px 1px white;
+}
+
+.content-body {
+	min-height: 600px;
+	background: url(../images/background.jpg);
+	box-shadow: 0px 5px 3px #5d667c;
+}
+
+.main-content {
 	width: 1000px;
-	padding: 40px 0 0 20px;
+	margin: 0 auto;
+	padding: 10px 0 50px 0;
+}
+
+.command-bar-container {
+	height: 70px;
+}
+
+.command-bar {
+	background: #a58ab3;
+	border-radius: 3px;
+	font-size: 12pt;
+	padding: 10px 20px;
+	color: white;
+	height: 30px;
+}
+
+
+.command-bar li {
+	float: left;
+	padding: 5px;
+	margin-right: 130px;
+}
+
+.command-bar li:last-child {
+	float: right;
+}
+
+
+.command-bar input {
+	margin-left: 6px;
+	margin-right: 6px;
 }
 
 /*
@@ -79,67 +122,109 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: museo-sans-rounded;
 	color: #a58ab3;
-	text-shadow: 0.5px 0.5px 0.5px #CCC;
-	margin: 0 0 1em;
+	text-shadow: 0.5px 0.5px 0.5px #FFFFFF;
+	margin: 0 0 0.5em;
 }
 
-h1, h2 {
-	font-size: 180%;
+h1 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+h2 {
+	font-size: 150%;
 }
 
 h3 {
 	font-size: 130%;
 }
 
+h4 {
+	font-size: 120%;
+}
+
 p {
 	margin: 0.5em 0 1em;
 }
 
+a:hover {
+	text-decoration: underline;
+}
 
-/*
- * Layout Constrains
- */
-
-.constrain-width {
-	max-width: 1000px;
+.dark h4 {
+	color: white;
+	text-shadow: none;
 }
 
 /*
- * Instructions
+ * Layout
  */
-#form-instructions {
+
+.two-col-left-narrow-float {
+	width: 280px;
+	float: left;
+}
+
+.two-col-right-wide {
+	width: 700px;
+	margin-left: 300px;
+}
+
+.two-col-left {
+	width: 650px;
+	margin: 10px 10px 0 10px;
+}
+
+.two-col-right {
 	width: 300px;
+	margin: 10px 20px 0 20px;
 	float: right;
 }
 
+.margin-top-10 {
+	margin-top: 10px;
+}
+
+.margin-top-30 {
+	margin-top: 30px;
+}
 /*
  * Header
  */
 
 header {
-	background: #030f26;
-	padding: 20px 20px 8px;
+	background: #203744;
 	border-bottom: 3px solid #a58ab3;
+}
+
+header .header-wrap {
+	background: #203744;
+	width: 960px;
+	margin: 0 auto;
+	padding: 20px 20px 8px; /* top - right+left - bottom */
 }
 
 #logo {
 	float: left;
+	font-size: 130%;
+	text-shadow: none;
 	color: white;
 	font-family: museo-sans-rounded;
 }
 
 #service-list {
-	width: 140px;
 	color: white;
 	text-shadow: 1px 1px #666666;
 	font-family: museo-sans-rounded;
-	text-align: right;
 	float: right;
 	position: relative;
+	background: #fe9e21;
+	margin-right: 20px;
+	font-size: 90%;
+	padding: 2px 4px;
 }
 
 #service-list:hover {
-	background: url(../images/service-list-hover.png) no-repeat;
 }
 
 #facebook-connect {
@@ -148,21 +233,76 @@ header {
 	background: url(../images/fb-login.png) no-repeat;
 	float: right;
 	position: relative;
-	margin-right: 20px;
 }
 
 /**
  * forms and Inputs
  */
 
-fieldset {
-	border: 1px solid #cccccc;
-	box-shadow: 1px 1px #bbbbbb;
+.search-result {
+	width: 320px;
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.search-result img {
+	width: 320px;
+	border: #E0E0E0;
+	margin: 0 auto;
+}
+
+.search-result h4 {
+	font-size: 14pt;
+	margin-bottom: 2px;
+}
+
+.search-result .price {
+	width: 34px;  /*This is not enough width to 3 digit numbers*/
+	height: 32px;
+	padding-top: 2px;
+	border-radius: 17px;
+	font-size: 14pt;
+	color: white;
+	text-align: center;
+	background: #0a9aaf;
+	float: right;
+	margin-top: 10px;
+}
+
+.page-nav ul {
+	float: right;
+}
+
+.page-nav ul li{
+	display: inline;
+	float: left;
+	margin-right: 10px;
+}
+
+.page-nav .active {
+	color: #0a9aaf;
+	font-weight: bold;
+}
+
+fieldset, .search-result, .panel {
+	border: 1px solid #E0E0E0;
+	border-radius: 2px;
 	background: white;
-	width: 60%;
-	padding: 30px 20px;
-	margin: 0 0 10px;
+	padding: 10px 10px;
+	margin-bottom: 10px;
 	text-shadow: none;
+	vertical-align: bottom;
+}
+
+.search-result:hover {
+	border: 1px solid #cccccc;
+	box-shadow: 0px 0px 3px #999;
+	-moz-transition: box-shadow 0.5s;
+}
+
+fieldset:hover, .panel:hover {
+	border: 1px solid #cccccc;
+	-moz-transition: border 1s;
 }
 
 fieldset h3 {
@@ -202,9 +342,11 @@ input, textarea {
 	margin: 1px 1px 6px;
 	border-radius: 3px;
 	border: 1px solid #999999;
-	box-shadow: 1px 1px #888888;
 	font: museo-sans-rounded; 
-	font-size: 110%;
+	font-size: 13pt;
+}
+
+input[type="text"], textarea {
 	width: 500px;
 }
 
@@ -224,9 +366,37 @@ select {
 }
 
 input[type="radio"], input[type="checkbox"] {
-	margin: 0 15px 0 0;
+	margin: 0 8px 0 0;
 	width: 20px;
 	height: 20px;
+	vertical-align: bottom;
+}
+
+input[type="submit"] {
+	background: #60a01f;
+	font-size: 11pt;
+	color: white;
+	
+	padding: 4px 20px 4px;
+	box-shadow: 0px 0px 2px #7a7a7a;
+	border-radius: 3px;
+	font-family: museo-sans-rounded;
+	cursor: pointer;
+}
+
+button {
+	font-size: 11pt;
+	padding: 4px 20px 4px;
+	box-shadow: 0px 0px 2px #7a7a7a;
+	background: #0a9aaf;
+	border: none;
+	color: white;
+	border-radius: 3px;
+	font-family: museo-sans-rounded;
+	cursor: pointer;
+}
+input[type="submit"]:hover {
+	background: #50821d;
 }
 
 input:focus, textarea:focus {
@@ -241,19 +411,19 @@ input:focus, textarea:focus {
 	font-size: 90%;
 }
 
-.long {
+input.long {
 	width: 500px;
 }
 
-.medium {
+input.medium {
 	width: 300px;
 }
 
-.short {
+input.short {
 	width: 200px;
 }
 
-.shorter {
+input.shorter {
 	width: 120px;
 }
 
@@ -261,78 +431,53 @@ input:focus, textarea:focus {
 	height: 180px;
 }
 
-input[type="submit"].go-button {
-	width: 200px;
-	background: green;
-	color: white;
-}
-
 /**
  * Search-box
  */
 
-.textbox {
-	position: relative;
-	display: inline-block;
-	width: 200px;
-	border: 1px solid black;
-	border-radius: 5px;
-	border: 1px solid #999999;
-	box-shadow: 1px 1px #666666;
-	background: white;
-	margin: 0 7px;
-}
-
-.textbox-default {
-	position: absolute;
-	left: 10px;
-	top: 5px;
-	color: #aaaaaa;
-	text-shadow: 1px 1px #dddddd;
-	text-align: left;
-	font-size: 80%;
-}
-
 #search-box {
-	background: #52c4ff;
-	height: 70px;
-	padding-top: 35px;
-	border-radius: 15px;
-	width: 900px;
-	margin: 40px auto 50px;
-	font-size: 150%;
-	line-height: 1.4;
-	color: white;
-	text-align: center;
-	text-shadow: 1px 1px #7a7a7a;
-}
-
-#search-box-locale {
-	width: 250px;
-}
-
-input#search-button {
-	background: #7ec437;
-	color: white;
-	padding: 5px 20px;
-	font-size: 10pt;
-	border: 3px solid white;
-	border-radius: 8px;
-	font-family: museo-sans-rounded;
-	font-size: 12pt;
-}
-.search-results {
-
-}
-
-.search-result {
-	background: white;
+	background: #0a9aaf;
+	padding: 12px 20px 12px;
 	border-radius: 5px;
-	border: 1px #cccccc solid;
-	height: 100px;
-	width: 640px;
-	margin: 10px 20px 10px 0;
-	padding: 10px;
+	width: 650px;
+	margin: 40px auto 50px;
+	color: white;
+	text-align: left;
+	text-shadow: none;
+	box-shadow: 0px 0px 10px #666666;
+	bottom: 100px;
+	left: 50%;
+	margin-left: -325px;
+	position: absolute;
+}
+
+.search-box-tagline {
+	font-size: 150%;
+	border-bottom: 1px solid white;
+	padding: 2px 0 13px;
+}
+
+.search-box-form {
+	padding: 15px 0 0;
+	font-size: 120%;
+}
+
+#search-box input[type="submit"] {
+	float: right;
+}
+
+#search-box input[type="text"] {
+	margin-left: 8px;
+	margin-right: 8px;
+	border: 1px solid white;
+}
+
+#search-left-bar {
+	background: #0a9aaf;
+	padding: 20px 20px 10px;
+	color: white;
+	text-align: left;
+	text-shadow: none;
 }
 
 .map {
@@ -346,8 +491,12 @@ input#search-button {
 	float: right;
 }
 
-.eula {
-	
+/**
+ * Experiences page
+ */
+
+#action-bar {
+	background: #a58ab3;
 }
 
 /**
@@ -355,13 +504,14 @@ input#search-button {
  */
 
 footer {
-	height: 180px;
-	padding: 30px 20px;
-	margin-top: 50px;
-	background: #485367;
-	color: #DDD;
+	padding: 70px 0 40px 20px;
+	color: #FFFFFF;
 	text-shadow: none;
-	font-size: 90%;
+}
+
+.footer-constrain {
+	width: 1000px;
+	margin: 0 auto;
 }
 
 footer ul.footer-nav li {
@@ -381,7 +531,70 @@ footer .copyright {
 }
 
 /**
- * Default Val CSs
+ * Image carasoul
+ */
+
+#exp-main-image-outer {
+	border: 1px solid #EFEFEF;
+	background: white;
+	margin-bottom: 10px;
+	overflow: hidden;
+	height: 450px;
+	position: relative;
+}
+
+#exp-main-image-frame {
+	border: 5px solid white;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 440px;
+	width: 638px;
+}
+
+.bottom-pad {
+	height: 5px;
+	position: absolute;
+	top: 600px;
+	width: 100%;
+	background: red;
+}
+
+#exp-main-image {
+	position: relative;
+}
+
+#exp-main-image img {
+	border: 5px solid white;
+	position: absolute;
+}
+
+#exp-thumbs {
+	overflow: hidden;
+	position: relative;
+	margin-top: 3px;
+}
+
+.exp-thumbs-img {
+	width: 70px;
+	height: 70px;
+	cursor: pointer;
+	border: 3px solid white;
+	margin-right: 2px;
+}
+
+.primary #exp-thumbs ul {
+	list-style: none;
+	margin-top: 10px;
+	
+}
+
+.primary #exp-thumbs li {
+	float: left;
+}
+
+/**
+ * Default Val CSS
  */
 
 .default-val-parent {
@@ -397,3 +610,225 @@ footer .copyright {
 	overflow: hidden;
 	text-shadow: none;
 }
+
+
+/* dashboard / all listings page */
+
+div.activate {
+	float: right;
+}
+
+
+ul.listings li.listing-item {
+}
+
+.listing {
+}
+
+.listing h4 a {
+	text-decoration: none;
+	color: #a58ab3;
+}
+
+.listing-title {
+	width: 150px;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.listing-image  {
+	width: 150px;
+	display: inline-block;
+	text-align: center;
+	margin-right: 30px;
+	vertical-align: middle;
+}
+
+.listing-item-short {
+	width: 120px;
+	display: inline-block;
+	text-align: center;
+	margin-right: 10px;
+	vertical-align: middle;
+}
+
+.listing-value {
+	font-size: 150%;
+	margin-top: 5px;
+}
+
+.listing-actions {
+	vertical-align: middle;
+	margin-top: 30px;
+	float: right;
+}
+
+.listing-actions button {
+	margin-left: 10px;
+}
+
+
+
+/* Inbox */
+
+.message {
+	padding: 10px;
+	margin-bottom: 10px;
+	border-top: 1px solid #E0E0E0;
+}
+
+.user {
+	width: 150px;
+	display: inline-block;
+	text-align: left;
+	margin-right: 10px;
+	vertical-align: middle;
+	overflow: hidden;
+}
+
+.user-name {
+	font-size: 90%;
+}
+
+.user-location {
+	font-size: 80%;
+}
+
+.user-image  {
+	width: 100px;
+	display: inline-block;
+	text-align: center;
+	margin-right: 30px;
+	vertical-align: middle;
+}
+
+.messsage-summary {
+	width: 500px;
+	display: inline-block;
+	text-align: left;
+	margin-right: 10px;
+	vertical-align: middle;
+	overflow: hidden;
+}
+
+.message-subject {
+	font-size: 120%;
+}
+
+.message-body {
+	margin-top: 5px;
+}
+
+
+.msg-right-block {
+	width: 200px;
+	display: inline-block;
+	text-align: center;
+	margin-top: 35px;
+	vertical-align: middle;
+	float: right;
+}
+
+.message-timestamp {
+	width: 200px;
+	display: inline-block;
+	text-align: right;
+	vertical-align: middle;
+/*	overflow: hidden;*/
+}
+
+.message-actions {
+	vertical-align: middle;
+	margin-top: 5px;
+	float: right;
+}
+
+.message-actions button {
+	margin-left: 10px;
+}
+
+/**
+ * Front page
+ */
+.front-page-item {
+	display: inline-block;
+	width: 500px;
+	height: 400px;
+	margin: 6px 2px 0;
+	border: 1px solid #DEDEDE;
+	position: relative;
+	text-shadow: none;
+}
+
+.front-page-item:hover {
+	-moz-transition: 0.5s;
+	border: 1px solid #ccc;
+	box-shadow: 0px 0px 3px #ccc;
+}
+
+.front-page-item img {
+	width: 500px;
+	height: 400px;
+	opacity: 0.5;
+}
+
+.front-page-item:hover img {
+	-moz-transition: opacity 0.5s;
+	opacity: 1;
+}
+
+.front-page-item .thumb-frame {
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: 10px white solid;
+	width: 480px;
+	height: 380px;
+	opacity: 0;
+}
+
+.front-page-item .thumb-frame:hover {
+	-moz-transition: opacity 0.5s;
+	opacity: 1;
+}
+
+.front-page-item .thumb-details {
+	position: absolute;
+	bottom: 0;
+	background: white;
+	width: 100%;
+	padding: 10px 0 0 0;
+}
+
+.front-page-item .fp-item-price {
+	float: right;
+	padding: 10px 0 0;
+	width: 40px;
+	height: 30px;
+	border-radius: 20px;
+	font-size: 12pt;
+	background: #0a9aaf;
+	color: white;
+}
+
+.front-page-item .fp-item-title, .front-page-item .fp-item-merchant {
+	padding: 0;
+	margin: 0;
+}
+
+.front-page-item .fp-item-title a {
+	font: museo-sans-rounded;
+	font-size: 14pt;
+	color: #7a7a7a;
+	text-decoration: none;
+}
+
+.front-page-item .fp-item-merchant a {
+	font: museo-sans-rounded;
+	color: #7a7a7a;
+	text-decoration: none;
+}
+
+
+
+
