--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -60,11 +60,10 @@ html {
 
 body {
 	font-family: calluna-sans, "helvetica", "ariel", sans-serif;
-	font-size: 11pt;
-	background: #6c7585;
-	color: #7a7a7a;
+	font-size: 10pt;
+	background: url(../images/background.jpg);
+	color: #555;
 	line-height: 1.3;
-	text-shadow: 1px 1px 1px #ccc;
 }
 
 .secondary {
@@ -74,9 +73,9 @@ body {
 }
 
 .content-body {
+	width: 1000px;
 	min-height: 600px;
-	background: url(../images/background.jpg);
-	box-shadow: 0px 5px 3px #5d667c;
+	margin: 0 auto;
 }
 
 .main-content {
@@ -121,14 +120,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: museo-sans-rounded;
-	color: #a58ab3;
 	text-shadow: 0.5px 0.5px 0.5px #FFFFFF;
 	margin: 0 0 0.5em;
 }
 
 h1 {
-	font-size: 150%;
-	font-weight: bold;
+	font-size: 25pt;
 }
 
 h2 {
@@ -151,6 +148,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+.dark {
+	color: white;
+}
+
 .dark h4 {
 	color: white;
 	text-shadow: none;
@@ -171,7 +172,7 @@ a:hover {
 }
 
 .two-col-left {
-	width: 650px;
+	width: 640px;
 	margin: 10px 10px 0 10px;
 }
 
@@ -194,14 +195,16 @@ a:hover {
 
 header {
 	background: #203744;
-	border-bottom: 3px solid #a58ab3;
+	border-top: 3px solid #96C51F;
+	width: 100%;
+	-moz-box-shadow: 0px 0px 2px 2px #666;
 }
 
 header .header-wrap {
 	background: #203744;
 	width: 960px;
 	margin: 0 auto;
-	padding: 20px 20px 8px; /* top - right+left - bottom */
+/*	padding: 20px 20px 8px;*/ /* top - right+left - bottom */
 }
 
 #logo {
@@ -210,6 +213,9 @@ header .header-wrap {
 	text-shadow: none;
 	color: white;
 	font-family: museo-sans-rounded;
+	background: #96C51F;
+	padding: 10px 20px 10px;
+	text-shadow: 1px 1px black;
 }
 
 #service-list {
@@ -319,8 +325,7 @@ fieldset label {
 }
 
 .description {
-	font-size: 90%;
-	color: #999;
+	font-size: 11pt;
 }
 
 .row {
@@ -373,14 +378,14 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 input[type="submit"] {
-	background: #60a01f;
-	font-size: 11pt;
+	background: #9cc500;
+	font-size: 12pt;
 	color: white;
 	
-	padding: 4px 20px 4px;
-	box-shadow: 0px 0px 2px #7a7a7a;
-	border-radius: 3px;
+	padding: 6px 30px 5px;
+	border-radius: 5px;
 	font-family: museo-sans-rounded;
+	text-shadow: 1px 1px 1px #333;
 	cursor: pointer;
 }
 
@@ -427,6 +432,10 @@ input.shorter {
 	width: 120px;
 }
 
+input.tiny {
+	width: 80px;
+}
+
 .tall {
 	height: 180px;
 }
@@ -445,7 +454,7 @@ input.shorter {
 	text-align: left;
 	text-shadow: none;
 	box-shadow: 0px 0px 10px #666666;
-	bottom: 100px;
+	top: 50px;
 	left: 50%;
 	margin-left: -325px;
 	position: absolute;
@@ -480,15 +489,11 @@ input.shorter {
 	text-shadow: none;
 }
 
-.map {
+#map {
 	background: white;
-	border-radius: 5px;
 	border: 1px #cccccc solid;
-	height: 400px;
-	width: 300px;
-	margin: 0 0 0 20px;
-	padding: 10px;
-	float: right;
+	width: 280px;
+	height: 300px;
 }
 
 /**
@@ -496,7 +501,29 @@ input.shorter {
  */
 
 #action-bar {
-	background: #a58ab3;
+}
+
+#action-bar .price {
+	font-size: 30pt;
+	text-align: center;
+}
+
+#action-bar .price .unit {
+	font-size: 18pt;
+}
+
+#action-bar .section {
+	text-align: left;
+	margin: 3px;
+}
+
+#action-bar .label {
+	display: inline-block;
+	width: 40px;
+}
+
+#action-bar input[type="submit"] {
+	float: right;
 }
 
 /**
@@ -504,7 +531,7 @@ input.shorter {
  */
 
 footer {
-	padding: 70px 0 40px 20px;
+	padding: 10px 0 10px 20px;
 	color: #FFFFFF;
 	text-shadow: none;
 }
@@ -526,6 +553,10 @@ footer .copyright {
 /*
  * Generics
  */
+.centered {
+	margin: 0 auto;
+}
+
 .clear {
 	clear: both;
 }
@@ -750,82 +781,105 @@ ul.listings li.listing-item {
 /**
  * Front page
  */
+#front-page {
+	min-height: 800px;
+	background: url(../images/background.jpg);
+	box-shadow: 0px 5px 3px #5d667c;
+}
+
+#front-page header {
+	position: fixed;
+	top: 0;
+}
+
+#front-page .top-spacer {
+	height: 200px;
+}
+
+#front-page #search-box {
+	position: fixed;
+	top: 40px;
+}
+
+.image-grid {
+	margin: 0 auto;
+}
+
+.front-page-col {
+	width: 400px;
+	float: left;
+}
+
 .front-page-item {
 	display: inline-block;
-	width: 500px;
-	height: 400px;
-	margin: 6px 2px 0;
-	border: 1px solid #DEDEDE;
+	width: 390px;
+	border: 5px solid white;
+	padding: 0;
 	position: relative;
 	text-shadow: none;
+	line-height: 0;
+	box-shadow: 0px 0px 3px #AAA;
+	background: white;
 }
 
 .front-page-item:hover {
-	-moz-transition: 0.5s;
-	border: 1px solid #ccc;
-	box-shadow: 0px 0px 3px #ccc;
+	box-shadow: 0px 0px 4px #666;
 }
 
 .front-page-item img {
-	width: 500px;
-	height: 400px;
-	opacity: 0.5;
+	width: 390px;
 }
 
-.front-page-item:hover img {
-	-moz-transition: opacity 0.5s;
-	opacity: 1;
-}
-
-.front-page-item .thumb-frame {
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: 10px white solid;
-	width: 480px;
-	height: 380px;
-	opacity: 0;
-}
-
-.front-page-item .thumb-frame:hover {
+.front-page-item:hover .thumb-details {
 	-moz-transition: opacity 0.5s;
 	opacity: 1;
 }
 
 .front-page-item .thumb-details {
+	-moz-transition: opacity 0.5s;
+	line-height: 1.2;
+	opacity: 0;
 	position: absolute;
-	bottom: 0;
+	bottom: 10px;
+	left: 0px;
+	right: 0px;
 	background: white;
-	width: 100%;
-	padding: 10px 0 0 0;
+	/* border-radius: 2px;
+	box-shadow: 0px 0px 5px #666; */
+}
+
+.fp-item-wrapper {
+	padding: 10px;
 }
 
 .front-page-item .fp-item-price {
 	float: right;
-	padding: 10px 0 0;
 	width: 40px;
-	height: 30px;
-	border-radius: 20px;
 	font-size: 12pt;
-	background: #0a9aaf;
+	text-align: center;
+	background: #96514d;
 	color: white;
+	margin-right: 10px;
+	padding: 5px 10px;
 }
 
-.front-page-item .fp-item-title, .front-page-item .fp-item-merchant {
+.front-page-item .fp-item-title, 
+.front-page-item .fp-item-merchant {
 	padding: 0;
 	margin: 0;
 }
 
 .front-page-item .fp-item-title a {
 	font: museo-sans-rounded;
-	font-size: 14pt;
-	color: #7a7a7a;
+	font-size: 11pt;
+	color: #555555;
 	text-decoration: none;
 }
 
 .front-page-item .fp-item-merchant a {
 	font: museo-sans-rounded;
-	color: #7a7a7a;
+	color: #808080;
+	font-size: 9pt;
 	text-decoration: none;
 }
 
