added new color scheme/font

--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -1,7 +1,9 @@
 {% block header %}
 <header>
 	<div class="header-wrap">
-		<div id="logo">Come Play Learn</div>
+		<a id="logo" href="/">
+			<span id="logo-come">Come</span><span id="logo-play">Play</span><span id="logo-learn">Learn</span>
+		</a>
 		<div id="service-list">List your activity</div>
 		<div class="clear"></div>
 	</div>
