--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -119,7 +119,7 @@ body {
  */
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: museo-sans-rounded;
+	font-family: cronos-pro;
 	text-shadow: 0.5px 0.5px 0.5px #FFFFFF;
 	margin: 0 0 0.5em;
 }
@@ -194,14 +194,12 @@ a:hover {
  */
 
 header {
-	background: #203744;
-	border-top: 3px solid #96C51F;
 	width: 100%;
-	-moz-box-shadow: 0px 0px 2px 2px #666;
+	-moz-box-shadow: 0px 0px 1px 1px #999;
+	background: #241901;
 }
 
 header .header-wrap {
-	background: #203744;
 	width: 960px;
 	margin: 0 auto;
 /*	padding: 20px 20px 8px;*/ /* top - right+left - bottom */
@@ -209,25 +207,43 @@ header .header-wrap {
 
 #logo {
 	float: left;
-	font-size: 130%;
-	text-shadow: none;
+	font-size: 16pt;
 	color: white;
-	font-family: museo-sans-rounded;
-	background: #96C51F;
-	padding: 10px 20px 10px;
-	text-shadow: 1px 1px black;
+	font-family: cronos-pro, sans-serif;
+	display: inline-block;
+}
+
+#logo a {
+	text-decoration: none;
+}
+
+#logo span {
+	display: inline-block;
+	padding: 10px 17px;
+}
+
+#logo-come {
+	background: #9cc500;
+}
+
+#logo-play {
+	background: #a0d8ef;
+}
+
+#logo-learn {
+	background: #df595f; 
 }
 
 #service-list {
 	color: white;
 	text-shadow: 1px 1px #666666;
-	font-family: museo-sans-rounded;
+	font-family: cronos-pro;
 	float: right;
 	position: relative;
 	background: #fe9e21;
-	margin-right: 20px;
-	font-size: 90%;
-	padding: 2px 4px;
+	margin: 10px 20px 0 0;
+	padding: 5px 10px;
+	border-radius: 3px;
 }
 
 #service-list:hover {
@@ -379,14 +395,16 @@ input[type="radio"], input[type="checkbox"] {
 
 input[type="submit"] {
 	background: #9cc500;
+	border: 1px solid #9cc500;
+
 	font-size: 12pt;
 	color: white;
 	
 	padding: 6px 30px 5px;
 	border-radius: 5px;
-	font-family: museo-sans-rounded;
-	text-shadow: 1px 1px 1px #333;
+	text-shadow: 1px 1px 1px #999;
 	cursor: pointer;
+	vertical-align: middle;
 }
 
 button {
@@ -445,12 +463,12 @@ input.tiny {
  */
 
 #search-box {
-	background: #0a9aaf;
+	background: #df595f;
+	color: white;
 	padding: 12px 20px 12px;
 	border-radius: 5px;
 	width: 650px;
 	margin: 40px auto 50px;
-	color: white;
 	text-align: left;
 	text-shadow: none;
 	box-shadow: 0px 0px 10px #666666;
@@ -531,14 +549,17 @@ input.tiny {
  */
 
 footer {
-	padding: 10px 0 10px 20px;
-	color: #FFFFFF;
+	padding: 0px 0 30px 0px;
+	color: #ACACAC;
 	text-shadow: none;
+	margin-top: 20px;
 }
 
 .footer-constrain {
 	width: 1000px;
 	margin: 0 auto;
+	border-top: 1px solid #DEDEDE;
+	padding: 15px 7px 0;
 }
 
 footer ul.footer-nav li {
@@ -784,7 +805,6 @@ ul.listings li.listing-item {
 #front-page {
 	min-height: 800px;
 	background: url(../images/background.jpg);
-	box-shadow: 0px 5px 3px #5d667c;
 }
 
 #front-page header {
@@ -857,7 +877,7 @@ ul.listings li.listing-item {
 	width: 40px;
 	font-size: 12pt;
 	text-align: center;
-	background: #96514d;
+	background: #df595f;
 	color: white;
 	margin-right: 10px;
 	padding: 5px 10px;
