switched base and layout. Styled login page

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% load thumbnail %}
 {% block title %}{{ experience.title }}{% endblock %}
 {% block extra_head %}
