--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -1,5 +1,5 @@
 <!-- THIS IS THE HOME PAGE INDEX.HTML SAVED IN THE EXPERIENCES APP -->
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 {% load x_tags %}
 
